--- a/table.html
+++ b/table.html
@@ -8,6 +8,7 @@
   <title>Document</title>
 </head>
 <body>
+  <!-- table starts here -->
   <table>
     <th>item1</th>
     <th>item2</th>
@@ -17,5 +18,6 @@
     <td>2</td>
     <td>3</td>
   </table>
+  <!-- table ends here -->
 </body>
 </html>
